--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Currency Converter</title>
 </head>
-<body>
+<body style="font-family: Arial, Helvetica, sans-serif; background-color: #f8f9fa;">
   <div id="root"></div>
   <script type="text/babel" src="index.js"></script>
 </body>
